# behavior_suite

./: .gitattributes  .gitignore  README.md  environment-gui.yml  pyproject.toml
configs/: preprocess_default.yaml
configs/subsystem_02/: sleapnn_default_profile.yaml  sleapnn_topdown_default_profile.yaml
docs/: README.md  ai_coding_guide.md  documentation_consolidation_plan.md  preprocess_implementation_plan_v1.md  preprocess_subsystem_spec_v1.md  preprocess_v1_field_test_audit.md  preprocess_v1_field_test_defect_triage.md  preprocess_v1_release_readiness.md  preprocess_v2_6_geometry_modes_design.md  preprocess_v2_implementation_plan.md  preprocess_v2_requirements_draft.md  subsystem_01_preprocessing.md  subsystem_01_status_and_roadmap.md
docs/archive/: README.md
docs/design/: subsystem_01_geometry_modes.md
docs/development/: ai_coding_guide.md
docs/subsystem_01/: preprocessing.md  status_and_roadmap.md
docs/subsystem_01/archive/: README.md  (+6 more)
docs/subsystem_02/: acceptance_test_specification.md  minimal_pose_inference_contract.md  mvp_scope_and_roadmap.md  sleap_inference_specification.md
legacy/: cage_cropper_reference.py  prepare_reference.py
scripts/: install_windows_gui.bat  launch_windows_gui.bat  validate_windows_gui_runtime.py
src/cli/: preprocess.py
src/pose_inference/: __init__.py  __main__.py  overlay.py  parquet_export.py  pose_qc.py  run_discovery.py  runner.py
src/preprocess/: background.py  cage_detection.py  config.py  crop_plan.py  exceptions.py  ffmpeg_runtime.py  logging_utils.py  manual_crop.py  masking.py  mat_sync_reader.py  metadata.py  models.py  pre_crop.py  raw_probe_cache.py  service.py  sync_writer.py  validation.py  video_prepare.py  video_probe.py
src/project/: models.py  paths.py  service.py  validation.py
src/ui/: __init__.py  app.py  main_window.py  preprocess_wizard.py  project_hydration.py  state.py  tasks.py
tests/: __init__.py  test_windows_gui_runtime_scripts.py
tests/cli/: test_preprocess_cli.py
tests/integration/: test_background_generation.py  test_ffmpeg_prepare.py  test_opencv_final_reencode.py  test_preprocess_service.py
tests/pose_inference/: test_gitignore.py  test_overlay.py  test_parquet_export.py  test_pose_qc.py  test_run_discovery.py  test_runner.py
tests/preprocess/: test_background.py  test_cage_detection.py  test_config.py  test_crop_plan.py  test_ffmpeg_runtime.py  test_logging_utils.py  test_manual_crop.py  test_masking.py  test_mat_sync_reader.py  test_metadata.py  test_pre_crop.py  test_service.py  test_sync_writer.py  test_validation.py  test_video_prepare_filtergraph.py  test_video_probe.py
tests/project/: test_paths.py  test_service.py
tests/ui/: test_crop_review_controller.py  test_encode_settings_controller.py  test_pose_inference_controller.py  test_pose_inference_page.py  test_preprocess_setup_controller.py  test_run_preprocess_controller.py  test_tasks.py  test_timing_controller.py
(+37 files in other folders)
