[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behavior-suite"
version = "0.1.0"
description = "Scientific behavioral video preprocessing suite for SLEAP-compatible mouse behavior analysis."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }

authors = [
{ name = "Engelhard Lab" }
]

keywords = [
"behavior",
"mouse",
"video-processing",
"SLEAP",
"neuroscience",
"computer-vision",
"preprocessing"
]

classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Intended Audience :: Science/Research",
"License :: Other/Proprietary License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Topic :: Scientific/Engineering",
]

dependencies = [
"numpy>=1.26,<3",
"opencv-python>=4.9,<5",
"scipy>=1.11,<2",
"h5py>=3.10,<4",
"pydantic>=2.6,<3",
"PyYAML>=6.0,<7",
"typer>=0.12,<1",
"rich>=13.7,<15",
"platformdirs>=4.2,<5",
]

[project.optional-dependencies]
dev = [
"pytest>=8.0,<9",
"pytest-cov>=5.0,<7",
"ruff>=0.5,<1",
"mypy>=1.10,<2",
"types-PyYAML>=6.0.12",
]

gui = [
"PySide6>=6.7,<7",
]

[project.scripts]
behavior-suite = "cli.preprocess:app"

[project.urls]
Documentation = "docs/"
Repository = "."

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
"project*",
"preprocess*",
"pose_inference*",
"cli*",
"ui*",
]
exclude = [
"tests*",
]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = [
"src",
]
testpaths = [
"tests",
]
python_files = [
"test_*.py",
]
python_classes = [
"Test*",
]
python_functions = [
"test_*",
]
addopts = [
"-ra",
"--strict-markers",
]
markers = [
"integration: tests that require external programs, video fixtures, or longer runtime.",
]

[tool.coverage.run]
branch = true
source = [
"project",
"preprocess",
"pose_inference",
"cli",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
"pragma: no cover",
"if TYPE_CHECKING:",
"raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = [
"src",
"tests",
]
exclude = [
  "legacy",
]

[tool.ruff.lint]
select = [
"E",
"F",
"I",
"UP",
"B",
"SIM",
]
ignore = [
"E501",
]

[tool.ruff.lint.isort]
known-first-party = [
"project",
"preprocess",
"pose_inference",
"cli",
"ui",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = [
"project",
"preprocess",
"pose_inference",
"cli",
]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
"cv2",
"h5py",
]
ignore_missing_imports = true
